# tinyfish

./: .gitignore  README.md
chess-ai/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
chess-ai/engine/: Board.cpp  Board.hpp  Board.s  CMakeCache.txt  CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp  Makefile  Network.cpp  Network.hpp  a.out  bbc.c  cmake_install.cmake  debug.py  main.cpp  test.cpp  tinyfish  uci.cpp  uci.hpp
chess-ai/evaluations/: .processing.py.swp  load.py  net_test.py  net_trace.py  net_training.py  processing.py  scrap.py
chess-ai/evaluations/data/: tiny_eval_model_d0.pth  traced_tiny_eval_model_d0.pth
